--- a/client/desk.html
+++ b/client/desk.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <div class="tools-menu">
-        <button id="change-to-pencil">К</button>
-        <button id="change-to-eraser">Л</button>
         <input type="color" id="stroke-color">
-        <input type="range" id="stroke-width" name="размер кисти" step="0.5">
+        <input type="range" id="stroke-width" name="размер кисти" min="2" max="100" step="1">
+        <div id="stroke-preview"></div>
     </div>
     <canvas width="100" height="100" id="cv"></canvas>
 </body>
