--- a/client/desk.html
+++ b/client/desk.html
@@ -13,5 +13,6 @@
         <div id="stroke-preview"></div>
     </div>
     <canvas width="100" height="100" id="cv"></canvas>
+    <canvas width="100" height="100" id="cv-2"></canvas>
 </body>
 </html>
