--- a/client/desk.html
+++ b/client/desk.html
@@ -12,6 +12,7 @@
         <input type="range" id="stroke-width" name="размер кисти" min="2" max="100" step="1">
         <div id="stroke-preview"></div>
     </div>
+    <div id="cursor"></div>
     <canvas width="100" height="100" id="cv"></canvas>
     <canvas width="100" height="100" id="cv-2"></canvas>
 </body>
