--- a/client/desk.html
+++ b/client/desk.html
@@ -15,5 +15,6 @@
     <div id="cursor"></div>
     <canvas width="100" height="100" id="cv"></canvas>
     <canvas width="100" height="100" id="cv-2"></canvas>
+    <canvas width="100" height="100" id="cv-3"></canvas>
 </body>
 </html>
